Fix video background issue: reorganize video file structure and improve Vercel configuration
- Move video from root to assets/videos/hero-video.mp4
- Update vercel.json to properly serve video files with correct headers
- Improve video loading JavaScript with better error handling
- Add comprehensive fallback system for video background
- Optimize video configuration for web deployment

--- a/env.example
+++ b/env.example
@@ -7,11 +7,20 @@ OPENAI_API_KEY=your_openai_api_key_here
 PORT=3000
 NODE_ENV=development
 
-# Optional: Database configuration (if you want to add user data persistence)
-# DATABASE_URL=your_database_url_here
+# Supabase Configuration (PERSISTENT STORAGE - RECOMMENDED)
+# Get these from: https://supabase.com/dashboard/project/_/settings/api
+# Follow guide: QUICK_START_SUPABASE.md
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_ANON_KEY=your-anon-key-here
+SUPABASE_SERVICE_ROLE_KEY=your-service-role-key-here
 
 # Instructions:
 # 1. Get your OpenAI API key from https://platform.openai.com/api-keys
 # 2. Replace 'your_openai_api_key_here' with your actual API key
-# 3. Save this file as .env (without the .example extension)
-# 4. Never commit the .env file to version control
+# 3. (RECOMMENDED) Configure Supabase for permanent storage:
+#    - Follow QUICK_START_SUPABASE.md (5 minutes setup)
+#    - Add your SUPABASE_URL and SUPABASE_ANON_KEY
+# 4. Save this file as .env (without the .example extension)
+# 5. Never commit the .env file to version control
+
+# Note: Without Supabase, data will be stored temporarily and lost on server restart
