--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "cors": "^2.8.5",
     "openai": "^4.20.1",
     "dotenv": "^16.3.1",
-    "multer": "^1.4.5-lts.1"
+    "multer": "^1.4.5-lts.1",
+    "@supabase/supabase-js": "^2.39.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
