--- a/vercel.json
+++ b/vercel.json
@@ -27,6 +27,10 @@
       "use": "@vercel/static"
     },
     {
+      "src": "assets/videos/**/*",
+      "use": "@vercel/static"
+    },
+    {
       "src": "manifest.json",
       "use": "@vercel/static"
     },
@@ -36,6 +40,10 @@
     },
     {
       "src": "favicon.ico",
+      "use": "@vercel/static"
+    },
+    {
+      "src": "*.mp4",
       "use": "@vercel/static"
     }
   ],
@@ -73,6 +81,19 @@
         {
           "key": "Content-Type",
           "value": "application/manifest+json"
+        }
+      ]
+    },
+    {
+      "source": "/assets/videos/**/*",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "video/mp4"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
         }
       ]
     }
