--- a/vercel.json
+++ b/vercel.json
@@ -57,6 +57,10 @@
       "destination": "/document-upload.html"
     },
     {
+      "source": "/api/chat/health",
+      "destination": "/api/chat/health"
+    },
+    {
       "source": "/((?!api/.*).*)",
       "destination": "/index.html"
     }
